          (old default) to really mean 0 and want -1 (new default) to mean
          "use topology precision" (Sandro Santilli)


* New Features *

 - #5993, [topology] Add max_edges parameter to TopoGeo_AddLinestring
          (Sandro Santilli)
 - #6001, support MultiLineString in ST_MakeLine (Paul Ramsey)
 - #2858, ST_MMin and ST_MMax (Paul Ramsey)
 - #5992, Optimize GiST index for repeated edge subdivision in topology (Darafei Praliaskouski)
 - #5702, Allow the compiler to detect the parallelism -flto=auto (Darafei Praliaskouski)
 - #4798, ST_AsGeoJSON warns about duplicate property keys (Darafei Praliaskouski)
 - #5950, Document POSTGIS_REGRESS_DB_OWNER for sandboxed regression roles (Darafei Praliaskouski)
 - #4332, Clarify the scope of several Function Reference categories (Darafei Praliaskouski)
 - #4222, [raster] ST_DumpAsPolygons honours PostgreSQL interrupts (Darafei Praliaskouski)
 - #5109, Document the meaning of topology.next_left_edge and topology.next_right_edge links (Darafei Praliaskouski)


* Bug Fixes *

 - #5948, [topology] Prevent MakeTopologyPrecise from erasing edges when
          grid size exceeds their extent (Darafei Praliaskouski)
 - #5959, Prevent histogram target overflow when analysing massive tables (Darafei Praliaskouski)
 - #4828, geometry_columns handles NOT VALID SRID checks without errors (Darafei Praliaskouski)
 - #5645, Docs: keep code operators ("=>") intact in translated manuals
          by enforcing verbatim CSS (Darafei Praliaskouski)
 - #5593, Docs: render manual images with GraphicsMagick without temporary files,
          enabling parallel builds, keeping ImageMagick fallbacks working, and
          documenting the generator workflow for contributors (Darafei Praliaskouski)

PostGIS 3.6.0
2025/09/01

This version requires PostgreSQL 12-18beta3, GEOS 3.8 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.14+ is needed.
To take advantage of all SFCGAL features, SFCGAL 2.2+ is needed.
